# wraith

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.opencode/agents/: architect.md  architecture-reviewer.md  code-reviewer.md  coordinator.md  decomposer.md  implementation-specialist.md  poc-specialist.md  research-specialist.md
crates/wraith/: Cargo.toml
crates/wraith-core/: Cargo.toml
crates/wraith-core/src/: error.rs  lib.rs  testutil.rs
crates/wraith-core/src/auth/: client_auth.rs  keys.rs  mod.rs  server_auth.rs
crates/wraith-core/src/client/: channel_manager.rs  connect.rs  forward.rs  mod.rs
crates/wraith-core/src/server/: channel_proxy.rs  control_channel.rs  handler.rs  mod.rs  rate_limit.rs  serve.rs  stealth.rs
crates/wraith-core/src/socks5/: mod.rs  protocol.rs
crates/wraith-core/src/transport/: acme.rs  iroh_transport.rs  mod.rs  tcp.rs  tls.rs
crates/wraith-core/tests/: auth_tests.rs  client_tests.rs  server_tests.rs  transport_tests.rs
crates/wraith-napi/: Cargo.toml
crates/wraith-napi/src/: connect.rs  lib.rs  serve.rs
crates/wraith/src/: main.rs
docs/: sdd_process.md
docs/architecture/: README.md  auth.md  call-protocol.md  client.md  napi-and-pubsub.md  open-questions.md  overview.md  server.md  transport.md  tun-shim.md
docs/architecture/decisions/: 001-pluggable-transport.md  002-tun-separate-process.md  003-iroh-stream-join.md  004-ssh-over-transport.md  005-socks5-before-tun.md  006-no-logging-of-tunnel-destinations.md  007-napi-single-stream.md  008-acme-lets-encrypt.md  009-default-iroh-relay.md  010-transport-chaining-cli.md  011-no-ssh-config-programmatic-api.md  012-auth-ed25519-and-cert-authority.md  013-fail2ban-friendly-logging.md  014-defer-tun-recommend-socks5-proxy.md  015-napi-rs-for-ffi-bridge.md  016-napi-expose-connect-and-serve.md  017-stealth-mode-protocol-multiplexing.md  018-control-channel-for-pubsub.md  019-proxy-dual-semantics.md  023-unified-auth-shared-key-material.md  024-bidirectional-call-protocol.md  025-handler-spec-separation.md
docs/research/: configuration.md
tasks/auth/: client-auth-handler.md  error-types.md  key-loading.md  server-auth-handler.md
tasks/cli/: connect-command.md  serve-command.md
tasks/client/: channel-manager.md  connect-options.md  port-forwarding.md  socks5-server.md
tasks/meta/: auth-layer.md  cli-layer.md  client-layer.md  napi-layer.md  server-layer.md  transport-layer.md
tasks/napi/: connect-function.md  project-setup.md  serve-function.md
tasks/review/: complete-system.md  core-foundation.md  server-and-client.md
tasks/server/: channel-proxy.md  control-channel.md  handler.md  rate-limiting-and-logging.md  serve-loop.md  stealth-mode.md
tasks/setup/: project-init.md  test-infrastructure.md
tasks/transport/: acme-cert-provisioning.md  iroh-transport.md  tcp-transport.md  tls-transport.md  trait-and-types.md
