[package]
name = "wraith-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "wraith_core"

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls"]
iroh = ["dep:iroh"]
acme = ["dep:rustls-acme", "tls"]

[dependencies]
russh = "0.49"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["compat"] }
tokio-rustls = { version = "0.26", optional = true }
rustls = { version = "0.23", optional = true }
rustls-acme = { version = "0.12", optional = true }
iroh = { version = "0.34", optional = true }