[package]
name = "wraith"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wraith"
path = "src/main.rs"

[features]
default = ["tls", "iroh"]
tls = ["wraith-core/tls"]
iroh = ["wraith-core/iroh", "dep:iroh", "dep:url"]

[dependencies]
wraith-core = { path = "../wraith-core" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
iroh = { version = "0.34", optional = true }
url = { version = "2", optional = true }